<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="acerca_de_mi">ACERCA DE MI</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">FTBSports</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="cons_text">LISTA DE NÚMEROS CONSUMIDOS</string>
    <string name="error_button">CONTINUAR</string>
    <string name="hello_world">Hello world!</string>
    <string name="light_description">Foco</string>
    <string name="logo_description">From The Bench</string>
    <string name="pro_con">PRO/CON</string>
    <string name="prod_text">LISTA DE PRODUCTOR/CONSUMIDOR</string>
    <string name="profile_description">Imagen de Perfil</string>
    <string name="spinner_description">Spinner</string>
    <string name="title_activity_about_me">AboutMe</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_pro_con">ProCon</string>
    <string name="vaciar_cache">VACIAR CACHÉ</string>

</resources>
